--- a/style/index.css
+++ b/style/index.css
@@ -23,7 +23,7 @@
 }
 
 /*navbar*/
-.navbar{
+.navbar {
     padding: 1rem !important;
 }
 
@@ -75,7 +75,7 @@
     margin-bottom: 1rem;
 }
 
-#heroimage .content-heroimage .heroimage-title p:nth-of-type(2){
+#heroimage .content-heroimage .heroimage-title p:nth-of-type(2) {
     margin-bottom: 0;
 }
 
@@ -99,7 +99,7 @@
     margin: 2.25rem 0;
 }
 
-#heroimage .content-heroimage .heroimage-data .data-a{
+#heroimage .content-heroimage .heroimage-data .data-a {
     margin: 0 0 1rem 0;
 }
 
@@ -138,6 +138,78 @@
 #heroimage .content-heroimage .heroimage-data .data-b img {
     width: 25%;
     margin-bottom: 0.5rem;
+}
+
+/*brands*/
+#brand .container-brand {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2.25rem 1rem;
+}
+
+#brand .container-brand .badge {
+    padding: 0.5rem;
+    border: 1px solid var(--color-primary);
+    border-radius: 0.5rem;
+    margin-bottom: 3rem;
+}
+
+#brand .container-brand .brand-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-items: center;
+}
+
+#brand .container-brand .brand-grid .brand-img {
+    width: 100%;
+    display: flex;
+    padding: 2.25rem 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    border-bottom: 1px solid var(--color-border);
+    border-right: 1px solid var(--color-border);
+}
+
+#brand .container-brand .brand-grid .brand-img:nth-of-type(2) {
+    border-right: 0;
+}
+
+#brand .container-brand .brand-grid .brand-img:nth-of-type(3) {
+    padding: 1rem 0px;
+}
+
+#brand .container-brand .brand-grid .brand-img:nth-of-type(4) {
+    border-right: 0;
+}
+
+#brand .container-brand .brand-grid .brand-img:nth-of-type(6) {
+    border-right: 0;
+}
+
+#brand .container-brand .brand-grid .brand-img:nth-of-type(7) {
+    border-bottom: 0;
+}
+
+#brand .container-brand .brand-grid .brand-img:nth-of-type(8) {
+    padding: 1rem 0px;
+    border: 0;
+}
+
+#brand .container-brand .brand-grid .brand-img img {
+    width: 75%;
+    object-fit: scale-down;
+}
+
+#brand .container-brand .brand-grid .brand-img:nth-of-type(3) img {
+    width: 35%;
+}
+
+#brand .container-brand .brand-grid .brand-img:nth-of-type(8) img {
+    width: 50%;
 }
 
 /*FAB*/
