--- a/style/index.css
+++ b/style/index.css
@@ -298,6 +298,10 @@ body {
     align-self: stretch;
 }
 
+#products .container-products .grid-products .card img {
+    width: 100%;
+}
+
 #products .container-products .grid-products .card .card-title h3 {
     color: var(--color-text-main);
     font-size: 1.25rem;
@@ -326,6 +330,122 @@ body {
     color: var(--color-text-button);
     padding: 1rem 1.5rem;
 }
+
+/*about us*/
+#about .container-about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2.25rem 1rem;
+    gap: 2.25rem;
+}
+
+#about .container-about span {
+    padding: 0.5rem;
+    border: 1px solid var(--color-primary);
+    border-radius: 0.5rem;
+    font-size: 0.75rem;
+    text-transform: uppercase;
+}
+
+#about .container-about .title-description {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+    align-self: stretch;
+}
+
+#about .container-about .title-description .heading {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+    align-self: stretch;
+    color: var(--color-text-main);
+}
+
+#about .container-about .title-description .heading h2 {
+    margin-bottom: 0;
+}
+
+#about .container-about .title-description .heading p {
+    margin-bottom: 0;
+}
+
+#about .container-about .title-description a {
+    width: 100%;
+    font-size: 1.125rem;
+    font-weight: 500;
+    background-color: var(--color-primary);
+    border: none;
+    color: var(--color-text-button);
+    padding: 1rem 1.5rem;
+}
+
+#about .container-about .grid-stats {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    align-self: stretch;
+}
+
+#about .container-about .grid-stats .card {
+    background-color: transparent;
+    display: flex;
+    padding: 2.25rem 0;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1.5rem;
+    align-self: stretch;
+    border-radius: 0;
+    border-top: 1px solid var(--color-border);
+    border-bottom: 1px solid var(--color-border);
+    color: var(--color-text-main);
+}
+
+#about .container-about .grid-stats .card:nth-of-type(2) {
+    border-top: 0;
+}
+
+#about .container-about .grid-stats .card:nth-of-type(3) {
+    border: 0;
+}
+
+#about .container-about .grid-stats .card h3 {
+    font-size: 3.375rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+    margin-bottom: 0;
+}
+
+#about .container-about .grid-stats .card .card-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1rem;
+    align-self: stretch;
+}
+
+#about .container-about .grid-stats .card .card-title h4 {
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+    margin-bottom: 0;
+}
+
+#about .container-about .grid-stats .card .card-title p {
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    margin-bottom: 0;
+}
+
+
 
 
 /*FAB*/
