--- a/style/index.css
+++ b/style/index.css
@@ -451,7 +451,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 2.25rem 0.5rem;
+    padding: 0 0.5rem;
     gap: 0.5rem;
     align-self: stretch;
 }
@@ -559,6 +559,95 @@ body {
     margin-bottom: 0.5rem;
 }
 
+/*footer*/
+#footer .container-footer {
+    display: flex;
+    padding: 0.5rem;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.25rem;
+}
+
+#footer .container-footer .footer-options {
+    display: flex;
+    padding: 2.25rem 1rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 2.25rem;
+    align-self: stretch;
+    border-radius: 0.5rem;
+    background: var(--color-text-main);
+}
+
+#footer .container-footer .footer-options img {
+    width: 75%;
+}
+
+#footer .container-footer .footer-options .options .navbar-nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+    align-self: stretch;
+    text-align: center;
+}
+
+#footer .container-footer .footer-options .options .navbar-nav .nav-item a {
+    padding: 0;
+}
+
+#footer .container-footer .footer-options p {
+    color: var(--color-text-button);
+    text-align: center;
+    font-family: "Instrument Sans";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%;
+}
+
+#footer .container-footer .footer-data {
+    display: flex;
+    padding: 2.25rem 1rem;
+    flex-direction: column;
+    align-items: start;
+    gap: 2.25rem;
+    align-self: stretch;
+    border-radius: 0.5rem;
+    background: var(--color-bg-secondary);
+    color: var(--color-text-main);
+}
+
+#footer .container-footer .footer-data .info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1.5rem;
+    align-self: stretch;
+}
+
+#footer .container-footer .footer-data .info p {
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 120%;
+}
+
+#footer .container-footer .footer-data .info a {
+    color: var(--color-text-main);
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 120%;
+}
+
+#footer .container-footer .footer-data .social-data .navbar-nav {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    align-self: stretch;
+}
 
 /*FAB*/
 .fixed-bottom {
