--- a/style/index.css
+++ b/style/index.css
@@ -59,6 +59,7 @@ body {
     background-image: url('https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/02.Hero/Hero_mobile.png?raw=true');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center center;
 }
 
 #heroimage .content-heroimage {
@@ -123,12 +124,12 @@ body {
 }
 
 #heroimage .content-heroimage .heroimage-data .data-b {
+    width: 100%;
     padding: 1rem;
     margin: 1rem 0 0 0;
     border-radius: 0.5rem;
     border: 1px solid var(--color-primary);
     background: var(--color-bg-secondary);
-    backdrop-filter: blur(3px);
 }
 
 #heroimage .content-heroimage .heroimage-data .data-b p {
@@ -271,6 +272,14 @@ body {
 }
 
 #products .container-products .grid-products {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1.5rem;
+    align-self: stretch;
+}
+
+#products .container-products .grid-products .grid-md {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -660,4 +669,87 @@ body {
 
 .fixed-bottom button img {
     width: 100%;
+}
+
+/*landscape phones, 608px*/
+@media (min-width: 608px) {
+    .navbar .container-navbar-brand {
+        width: 100%;
+    }
+
+    #heroimage .content-heroimage {
+        padding: 9rem 1rem 0 1rem;
+    }
+
+    #heroimage .content-heroimage .heroimage-data .data-b {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    #heroimage .content-heroimage .heroimage-data .data-b .data-image img {
+        width: 100%;
+        margin-bottom: 0;
+    }
+
+    #heroimage .content-heroimage .heroimage-data .data-b p {
+        font-size: 1rem;
+    }
+
+    #footer .container-footer .footer-options img {
+        width: 50%;
+    }
+}
+
+/*tablets, 768px*/
+@media (min-width: 768px) {
+    .navbar .container-navbar-brand .navbar-brand img {
+        width: 50%;
+    }
+
+    #heroimage .content-heroimage .heroimage-title .btn-primary {
+        width: auto;
+    }
+
+    #products .container-products .grid-products .grid-md {
+        flex-direction: row;
+    }
+
+    #products .container-products a {
+        width: auto;
+    }
+
+    #about .container-about .grid-stats .card {
+        flex-direction: row;
+    }
+
+    #about .container-about .title-description a {
+        width: auto;
+    }
+
+    #gallery .container-gallery .grid {
+        flex-direction: row;
+    }
+
+    #gallery .container-gallery .grid img {
+        width: 32.5%;
+    }
+
+    #gallery .container-gallery .banner-cta .title-description .btn {
+        width: auto;
+    }
+
+    #gallery .container-gallery .banner-cta .data {
+        display: flex;
+        align-items: center;
+    }
+
+    #gallery .container-gallery .banner-cta .data img {
+        width: 75%;
+        margin-bottom: 0;
+    }
+
+    #footer .container-footer .footer-options img {
+        width: 35%;
+    }
 }
