--- a/style/about.css
+++ b/style/about.css
@@ -83,6 +83,7 @@ body {
     padding: 2.25rem 1rem;
     flex-direction: column;
     align-items: flex-start;
+    gap: 2.25rem;
 }
 
 #mision .container-mision .title {
@@ -151,6 +152,120 @@ body {
     font-weight: 400;
     line-height: 150%;
     margin-bottom: 0;
+}
+
+/*values*/
+#values {
+    display: flex;
+    padding: 2.25rem 1.5rem;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+#values .container-values {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    align-self: stretch;
+    padding: 0;
+    border-radius: 1rem;
+    border: 1px solid var(--color-border);
+}
+
+#values .container-values .title-description {
+    display: flex;
+    padding: 2.25rem 1rem 0px 1rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2.25rem;
+    align-self: stretch;
+}
+
+#values .container-values .title-description span {
+    padding: 0.5rem;
+    border: 1px solid var(--color-primary);
+    border-radius: 0.5rem;
+    font-size: 0.75rem;
+    text-transform: uppercase;
+}
+
+#values .container-values .title-description h2 {
+    color: var(--color-text-main);
+    text-align: center;
+    font-size: 1.75rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+    margin-bottom: 0;
+}
+
+#values .container-values .title-description p {
+    color: var(--color-text-main);
+    text-align: center;
+    font-family: "Instrument Sans";
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+#values .container-values .values {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.5rem;
+    align-self: stretch;
+    padding: 0 1rem;
+}
+
+#values .container-values .values .text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    padding: 1rem;
+    border-radius: 8px;
+    border: 1px solid var(--color-border);
+}
+
+#values .container-values .values .text p {
+    color: var(--color-text-main);
+    text-align: center;
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 120%;
+    margin-bottom: 0;
+}
+
+#values .container-values img {
+    width: 100%;
+    height: 100vw;
+    object-fit: cover;
+    border-radius: 0 0 1rem 1rem;
+}
+
+/*team*/
+#team .container-team {
+    display: flex;
+    padding: 1rem;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.5rem;
+}
+
+#team .container-team img {
+    width: 100%;
+}
+
+#team .container-team .grid-images {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 0.5rem;
+    align-self: stretch;
 }
 
 
