--- a/style/about.css
+++ b/style/about.css
@@ -569,11 +569,11 @@ body {
     left: auto !important;
 }
 
-.fixed-bottom button {
+.fixed-bottom a {
     max-width: 96px;
 }
 
-.fixed-bottom button img {
+.fixed-bottom a img {
     width: 100%;
 }
 
