--- a/style/contact.css
+++ b/style/contact.css
@@ -54,6 +54,221 @@ body {
     border-color: var(--color-bg-primary);
 }
 
+/*heading*/
+#heading .title-description {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1.5rem;
+    padding: 9rem 1rem 2.25rem 1rem;
+}
+
+#heading .title-description h1 {
+    color: var(--color-text-main);
+    text-align: center;
+    font-size: 2.25rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+    margin-bottom: 0;
+}
+
+#heading .title-description p {
+    color: var(--color-text-main);
+    font-family: "Instrument Sans";
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 400;
+    text-align: center;
+    line-height: 150%;
+    margin-bottom: 0;
+}
+
+/*contact info*/
+#contact-info .content-contact {
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+    align-items: center;
+    gap: 0.25rem;
+    align-self: stretch;
+}
+
+#contact-info .content-contact .card {
+    display: flex;
+    padding: 1.5rem;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1.5rem;
+    align-self: stretch;
+    border-radius: 8px;
+}
+
+#contact-info .content-contact .card h2 {
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+}
+
+#contact-info .content-contact .card .card-description {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.5rem;
+}
+
+#contact-info .content-contact .card .card-description p {
+    font-family: "Instrument Sans";
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+    margin-bottom: 0;
+}
+
+#contact-info .content-contact .card .card-description p:nth-of-type(2) {
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+#contact-info .content-contact .card:nth-of-type(1) {
+    background-color: var(--color-primary);
+}
+
+#contact-info .content-contact .card:nth-of-type(1) h2 {
+    color: var(--color-bg-primary);
+}
+
+#contact-info .content-contact .card:nth-of-type(2) {
+    background-color: var(--color-bg-secondary);
+    border: 1px solid var(--color-border);
+}
+
+#contact-info .content-contact .card:nth-of-type(2) h2 {
+    color: var(--color-text-main);
+}
+
+#contact-info .content-contact .card:nth-of-type(2) p {
+    color: var(--color-text-main);
+}
+
+#contact-info .content-contact .card:nth-of-type(3) {
+    background-color: #101010;
+    border: 1px solid var(--color-border);
+}
+
+#contact-info .content-contact .card:nth-of-type(3) {
+    color: var(--color-text-main);
+}
+
+#contact-info .content-contact .card .card-description a {
+    color: var(--color-text-main);
+    text-decoration: none;
+}
+
+#form .content-form {
+    display: flex;
+    flex-direction: column;
+    padding: 0 0.5rem;
+    align-items: flex-start;
+    gap: 0.25rem;
+}
+
+#form .content-form .maps {
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+}
+
+#form .content-form .maps iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0.5rem;
+}
+
+#form .content-form form {
+    display: flex;
+    padding: 1.5rem 1rem;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1.5rem;
+    flex: 1 0 0;
+    border-radius: 8px;
+    background: var(--color-text-main);
+}
+
+#form .content-form form .title-description {
+    color: var(--color-text-button);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    align-self: stretch;
+}
+
+#form .content-form form .title-description h2 {
+    text-align: center;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+    margin-bottom: 0;
+}
+
+#form .content-form form .title-description p {
+    text-align: center;
+    font-family: "Instrument Sans";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    margin-bottom: 0;
+}
+
+#form .content-form form .inputs {
+    display: flex;
+    padding: 1rem;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+    align-self: stretch;
+    border-radius: 0px 0px 0.5rem 0.5rem;
+    border-right: 1px solid rgba(233, 238, 234, 0.00);
+    border-bottom: 1px solid rgba(233, 238, 234, 0.00);
+    border-left: 1px solid rgba(233, 238, 234, 0.00);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, #F4F4F4 100%);
+}
+
+#form .content-form form .inputs label {
+    font-size: 0.75rem;
+    color: var(--color-text-button);
+}
+
+#form .content-form form .inputs input {
+    border-radius: 0.5rem;
+    border: 1px solid #E9EEEA;
+}
+
+#form .content-form form .inputs button {
+    width: 100%;
+    color: var(--color-text-button);
+    text-align: center;
+    padding: 1rem;
+    font-family: "Instrument Sans";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 120%;
+    border-radius: 0.5rem;
+    border: 0;
+    background: #F9A825;
+}
+
 /*footer*/
 #footer .container-footer {
     display: flex;
@@ -168,6 +383,25 @@ body {
     }
 }
 
+/*tablets, 768px*/
+@media (min-width: 768px) {
+    .navbar .container-navbar-brand .navbar-brand img {
+        width: 50%;
+    }
+
+    #form .content-form .maps {
+        height: 35vw;
+    }
+
+    #form .content-form form {
+        padding: 1.5rem;
+    }
+
+    #form .content-form form .inputs {
+        padding: 1.5rem;
+    }
+}
+
 /*desktop, 992px*/
 @media (min-width: 992px) {
     .navbar {
@@ -182,6 +416,10 @@ body {
         justify-content: end;
     }
 
+    .navbar-expand-lg .navbar-nav {
+        gap: 0.5rem;
+    }
+
     .navbar-expand-lg .navbar-nav .nav-link {
         color: var(--color-text-button);
         font-weight: 500;
@@ -191,7 +429,23 @@ body {
         font-weight: 500;
         background-color: #D18100;
         border-radius: 0.5rem;
-        padding: 0.5rem 1rem!important;
+        padding: 0.5rem 1rem !important;
+    }
+
+    #heading .title-description h1 {
+        text-align: left;
+    }
+
+    #heading .title-description p {
+        text-align: left;
+    }
+
+    #contact-info .content-contact {
+        flex-direction: row;
+    }
+
+    #form .content-form form {
+        padding: 3.75rem 3rem;
     }
 
     #footer .container-footer {
@@ -209,6 +463,19 @@ body {
 
 /*large desktops, 1200px*/
 @media (min-width: 1200px) {
+    #form .content-form {
+        flex-direction: row;
+    }
+
+    #form .content-form .maps {
+        height: auto;
+        align-self: stretch;
+    }
+
+    #form .content-form {
+        height: 100%;
+    }
+
     #footer .container-footer {
         justify-content: space-between;
     }
